--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,14 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^10.1",
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
@@ -15,7 +19,8 @@
         "spatie/laravel-activitylog": "^4.12",
         "spatie/laravel-medialibrary": "^11.21",
         "spatie/laravel-permission": "^7.2",
-        "spatie/laravel-tags": "^4.11"
+        "spatie/laravel-tags": "^4.11",
+        "zanysoft/laravel-zip": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
